--- a/src/os/desktop.css
+++ b/src/os/desktop.css
@@ -5,9 +5,10 @@
 html,
 body,
 #root {
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
+  height: 100dvh;
   min-width: 320px;
-  height: 100%;
   margin: 0;
 }
 
